# PetsProgram

./: .gitignore  CMakeLists.txt  README.md
version1/: main.c  person.c  person.h  pets.c  pets.h  utils.c  utils.h
version2/: main.c  person.c  person.h  pets.c  pets.h  utils.c  utils.h
